--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -32,6 +32,8 @@ a {
 
 img, svg {
   display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 #root {
